bat.bool1.parottrouble.ParotTrouble.scala.error
Compilation error:
ParotTrouble:4: error: not found: value &
    if (hour<7) & (hour>20){
                ^